// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/HalfRow matches snapshot with className 1`] = `
<ForwardRef
  noGutters={false}
>
  <ForwardRef
    lg={
      Object {
        "offset": 5,
        "span": 2,
      }
    }
    md={
      Object {
        "offset": 4,
        "span": 4,
      }
    }
    xs={
      Object {
        "offset": 3,
        "span": 6,
      }
    }
  >
    <p
      className="mister-rogers"
    >
      <p>
        Hello, world.
      </p>
    </p>
  </ForwardRef>
</ForwardRef>
`;

exports[`components/HalfRow matches snapshot without className 1`] = `
<ForwardRef
  noGutters={false}
>
  <ForwardRef
    lg={
      Object {
        "offset": 5,
        "span": 2,
      }
    }
    md={
      Object {
        "offset": 4,
        "span": 4,
      }
    }
    xs={
      Object {
        "offset": 3,
        "span": 6,
      }
    }
  >
    <p>
      <p>
        Hello, world.
      </p>
    </p>
  </ForwardRef>
</ForwardRef>
`;

exports[`components/Intro matches snapshot 1`] = `
<ForwardRef
  fluid={false}
>
  <ForwardRef
    noGutters={false}
  >
    <ForwardRef>
      <ForwardRef
        fluid={false}
      >
        <h1>
          This is the Cogniflector
        </h1>
        <p>
          This application will ask you a short series of questions to you and your team.
        </p>
      </ForwardRef>
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    noGutters={false}
  >
    <ForwardRef
      xs={12}
    >
      <p>
        This application will take you through the steps to evaluate your own cognitive reflection. The process is simple:
      </p>
      <ol>
        <li>
          Answer a series of multiple choice questions individually.
        </li>
        <li>
          Answer a series of multiple choice questions in groups of 3 or more.
        </li>
        <li>
          The scores from step 
          <b>
            1
          </b>
           and 
          <b>
            2
          </b>
           are compared.
        </li>
      </ol>
    </ForwardRef>
  </ForwardRef>
  <HalfRow>
    <ForwardRef>
      <ForwardRef>
        <ForwardRef>
          #
        </ForwardRef>
      </ForwardRef>
      <ForwardRef
        placeholder="team code"
        type="text"
        value="foo"
      />
    </ForwardRef>
  </HalfRow>
  <HalfRow
    className="centered"
  >
    <withRouter(LinkContainer)
      to="/question/1"
    >
      <ForwardRef
        active={false}
        disabled={false}
        variant="success"
      >
        Let's get started!
      </ForwardRef>
    </withRouter(LinkContainer)>
  </HalfRow>
</ForwardRef>
`;
